# segura-gateway-connect

./: Cargo.toml  Dockerfile  README.md  init.sql
src/: db.rs  main.rs  state.rs
src/connect/: api.rs  interaction_log.rs  mod.rs  status.rs
src/connect/callback/: jwt.rs  mod.rs
src/gateway/: api.rs  auth.rs  callback.rs  error.rs  from.rs  mask.rs  mod.rs  payin.rs  status.rs
