[package]
name = "segura-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.8.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3.41", features = ["serde-human-readable"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
